--- a/app/src/main/res/values-eu/strings.xml
+++ b/app/src/main/res/values-eu/strings.xml
@@ -2,20 +2,20 @@
 <!--
   ~ Copyright 2019 - 2023 Tyler Williamson
   ~
-  ~ This file is part of QuickWeather.
+  ~ This file is part of PureWeather.
   ~
-  ~ QuickWeather is free software: you can redistribute it and/or modify
+  ~ PureWeather is free software: you can redistribute it and/or modify
   ~ it under the terms of the GNU General Public License as published by
   ~ the Free Software Foundation, either version 3 of the License, or
   ~ (at your option) any later version.
   ~
-  ~ QuickWeather is distributed in the hope that it will be useful,
+  ~ PureWeather is distributed in the hope that it will be useful,
   ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
   ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
   ~ GNU General Public License for more details.
   ~
   ~ You should have received a copy of the GNU General Public License
-  ~ along with QuickWeather.  If not, see <https://www.gnu.org/licenses/>.
+  ~ along with PureWeather.  If not, see <https://www.gnu.org/licenses/>.
   --><resources xmlns:tools="http://schemas.android.com/tools">
     <string name="format_separator">", "</string>
     <string name="format_precipitation_end" tools:ignore="PluralsCandidate">%1$s-k %2$d minututan bukatuko du</string>
@@ -43,24 +43,23 @@
     <string name="text_today">Gaur</string>
     <string name="onboarding_ui_button_auto">Automatikoa</string>
     <string name="weather_precip_mix">Nahasia</string>
-    <string name="onboarding_welcome_text_thanks_paragraph">QuickWeather posible egiten dute:
+    <string name="onboarding_welcome_text_thanks_paragraph">PureWeather posible egiten dute:
 \n • <a href="https://openweathermap.org/">OpenWeatherMap</a> eta <a href="https://open-meteo.com/">Open-Meteo</a>
 \n • Amit Jakhu-ren <a href="https://github.com/amitjakhu/dripicons-weather">Dripicons - Eguraldia</a>
 \n • <a href="https://www.rainviewer.com/">RainViewer</a>
 \n • <a href="https://github.com/woxblom/DragListView">ListDragView</a> (<a href="https://github.com/woxblom/DragListView/blob/master/LICENSE">lizentzia </a>) Magnus Woxblomek</string>
     <string name="onboarding_provider_owm_onecall_text_welcome">OpenWeatherMap-eko API gako bat beharko duzu OneCall APIrako harpidetza batekin. Ez baduzu, doako API gako bat lortzeko izena eman dezakezu <a href="https://home.openweathermap.org/subscriptions/unauth_subscribe/onecall_30/base">hemen</a>. API gako berriak ordu pare bat behar izan ditzake aktibatzeko eta erabiltzeko prest egoteko.</string>
-    <string name="dialog_location_denied">QuickWeather-ek kokapen baimena behar du zure uneko kokapena aurkitzeko eta eguraldia emateko</string>
+    <string name="dialog_location_denied">PureWeather-ek kokapen baimena behar du zure uneko kokapena aurkitzeko eta eguraldia emateko</string>
     <string name="dialog_button_close">Itxi</string>
     <string name="error_connecting_api">Errore bat gertatu da APIra konektatzean</string>
     <string name="onboarding_units_button_fahrenheit">Fahrenheit (°F)</string>
     <string name="onboarding_location_button_clear_desc">Garbitu</string>
     <string name="onboarding_notif_text_title">Jakinarazpenak</string>
-    <string name="text_privacy_policy"><a href="https://tylerwilliamson.github.io/QuickWeather/PrivacyPolicy">Pribatutasun politika</a></string>
-    <string name="text_report_a_bug">Akats baten berri eman</string>
+    <string name="text_privacy_policy"><a href="https://tylerwilliamson.github.io/PureWeather/PrivacyPolicy">Pribatutasun politika</a></string>
     <string name="onboarding_location_text_title">Lekuak</string>
     <string name="dialog_background_location">Atzeko planoko kokapenerako sarbidea gaitzeko, mesedez:
 \n
-\n1. Ireki QuickWeather-en ezarpenak
+\n1. Ireki PureWeather-en ezarpenak
 \n2. Nabigatu \"%1$s\"-era
 \n3. Hautatu \"%2$s\"
 \n4. Aukeratu \"%3$s\"
@@ -80,8 +79,8 @@
     <string name="channel_alerts_description">Zure gobernuaren eguraldi zakarraren abisuak</string>
     <string name="channel_persistent_name">Uneko eguraldia</string>
     <string name="weather_desc_breezy">Haizetsua</string>
-    <string name="onboarding_welcome_text_policies_paragraph">• QuickWeather <a href="https://www.gnu.org/licenses/">GNU Lizentzia Publiko Orokorra</a>ren lizentzia duen software librea da
-\n • Begiratu <a href="https://tylerwilliamson.github.io/QuickWeather/PrivacyPolicy">Pribatutasun Politika</a></string>
+    <string name="onboarding_welcome_text_policies_paragraph">• PureWeather <a href="https://www.gnu.org/licenses/">GNU Lizentzia Publiko Orokorra</a>ren lizentzia duen software librea da
+\n • Begiratu <a href="https://tylerwilliamson.github.io/PureWeather/PrivacyPolicy">Pribatutasun Politika</a></string>
     <string name="onboarding_location_button_current_location">Leku hau</string>
     <string name="onboarding_provider_button_testconnection">Probatu konexioa</string>
     <string name="text_required">Beharrezkoa</string>
@@ -92,9 +91,9 @@
     <string name="dialog_location_disclosure_title">Kokapenaren dibulgazioa</string>
     <string name="error_unexpected_api_result">Ustekabeko APIaren emaitza</string>
     <string name="onboarding_provider_openmeteo_instance_hint">Open-Meteo Instantzia (aukerakoa)</string>
-    <string name="onboarding_welcome_text_paragraph">Eskerrik asko nire aplikazioa instalatzeagatik! QuickWeather DOAKOA eta kode irekia da eta <a href="https://play.google.com/store/apps/details?id=com.ominous.quickweather">Google Play, <a href="https://f-droid.org/en/packages/com.ominous.quickweather/">F-Droid</a> eta nire <a href="https://github.com/TylerWilliamson/QuickWeather /releases">GitHub</a></a>-ean bakarrik dago eskuragarri. Aplikazio hau beste iturri batetik instalatu baduzu, desinstalatu eta instalatu Play Store, F-Droid edo GitHub-eko bertsioa.</string>
+    <string name="onboarding_welcome_text_paragraph">Eskerrik asko nire aplikazioa instalatzeagatik! PureWeather DOAKOA eta kode irekia da eta <a href="https://play.google.com/store/apps/details?id=com.cworld.pureweather">Google Play, <a href="https://f-droid.org/en/packages/com.cworld.pureweather/">F-Droid</a> eta nire <a href="https://github.com/TylerWilliamson/PureWeather /releases">GitHub</a></a>-ean bakarrik dago eskuragarri. Aplikazio hau beste iturri batetik instalatu baduzu, desinstalatu eta instalatu Play Store, F-Droid edo GitHub-eko bertsioa.</string>
     <string name="weather_desc_dry">Lehorra</string>
-    <string name="onboarding_provider_openmeteo_text_welcome"><a href="https://open-meteo.com/">Open-Meteo</a> Doako eta kode irekiko auto-ostalari eguraldi hornitzailea da. Open-Meteo-k ez du API gakorik behar, baina <a href="https://open-meteo.com/en/pricing">Open-Meteo-ko harpidedunek</a> beren API gakoa erabil dezakete, lagundu nahi badute. Open-Meteo. Lehenespenez, QuickWeather-ek Open-Meteo API nagusia erabiliko du, baina erabiltzaileek aukera dezakete behean zein Open-Meteo instantzia erabili. Ikusi <a href="https://github.com/open-meteo/open-meteo">OpenMeteo GitHub biltegia</a> zure instantzia ostatatzeari buruzko informazio gehiago lortzeko.</string>
+    <string name="onboarding_provider_openmeteo_text_welcome"><a href="https://open-meteo.com/">Open-Meteo</a> Doako eta kode irekiko auto-ostalari eguraldi hornitzailea da. Open-Meteo-k ez du API gakorik behar, baina <a href="https://open-meteo.com/en/pricing">Open-Meteo-ko harpidedunek</a> beren API gakoa erabil dezakete, lagundu nahi badute. Open-Meteo. Lehenespenez, PureWeather-ek Open-Meteo API nagusia erabiliko du, baina erabiltzaileek aukera dezakete behean zein Open-Meteo instantzia erabili. Ikusi <a href="https://github.com/open-meteo/open-meteo">OpenMeteo GitHub biltegia</a> zure instantzia ostatatzeari buruzko informazio gehiago lortzeko.</string>
     <string name="channel_errors_description">Eguraldia berreskuratzean gertatzen diren erroreak</string>
     <string name="onboarding_ui_button_light">Argia</string>
     <string name="weather_desc_humid">Hezea</string>
@@ -104,7 +103,7 @@
     <string name="error_obtaining_weather">Errore bat gertatu da eguraldia eskuratzean</string>
     <string name="text_error_getting_release">Errore bat gertatu da bertsio berria bilatzean</string>
     <string name="onboarding_location_drag_anchor_desc">Arrastatu aingura</string>
-    <string name="dialog_location_disclosure">QuickWeather-ek kokapen-datuak biltzen ditu zure uneko kokapena zehazteko. Datu hauek ez dira zure telefonotik irteten. Eguraldiaren jakinarazpen iraunkorra edo eguraldi alertak ere gaitzen badituzu, QuickWeather-ek zure kokapena atzeko planoan jasoko du, nahiz eta aplikazioa itxita dagoen edo erabiltzen ez egon.</string>
+    <string name="dialog_location_disclosure">PureWeather-ek kokapen-datuak biltzen ditu zure uneko kokapena zehazteko. Datu hauek ez dira zure telefonotik irteten. Eguraldiaren jakinarazpen iraunkorra edo eguraldi alertak ere gaitzen badituzu, PureWeather-ek zure kokapena atzeko planoan jasoko du, nahiz eta aplikazioa itxita dagoen edo erabiltzen ez egon.</string>
     <string name="onboarding_units_text_wind_speed">Haizearen abiadura</string>
     <string name="onboarding_ui_text_title">Erabiltzailearen interfazea</string>
     <string name="onboarding_provider_title_click_action">hautatu eguraldi hornitzailea</string>
@@ -115,7 +114,7 @@
     <string name="text_accept">Onartu</string>
     <string name="onboarding_provider_owm_edittext_hint">OpenWeatherMap API gakoa</string>
     <string name="text_error">Errorea</string>
-    <string name="text_invalid_subscription">QuickWeather-ek \"OneCall\" harpidetza behar du</string>
+    <string name="text_invalid_subscription">PureWeather-ek \"OneCall\" harpidetza behar du</string>
     <string name="snackbar_background_location_notifications">Gaitu atzeko planoko kokapena Nire kokapenaren jakinarazpenak jasotzeko</string>
     <string name="text_error_new_version">Errore bat gertatu da bertsio berria egiaztatzen</string>
     <string name="text_whats_new">Zer berri\?</string>
@@ -136,7 +135,7 @@
     <string name="onboarding_provider_openmeteo_text_warning">Abisua: Open-Meteok ez du une honetan eguraldi-alertarik ematen. Kontuz ibili mesedez.</string>
     <string name="dialog_background_location_title">Gaitu atzeko planoko kokapena</string>
     <string name="dialog_button_manual">Eskuzkoa</string>
-    <string name="snackbar_notification_permission">Android 13-n hasita, QuickWeather-ek Jakinarazpenak baimena behar du jakinarazpenak bistaratzeko</string>
+    <string name="snackbar_notification_permission">Android 13-n hasita, PureWeather-ek Jakinarazpenak baimena behar du jakinarazpenak bistaratzeko</string>
     <string name="text_decline">Ukatu</string>
     <string name="onboarding_ui_button_dark">Iluna</string>
     <string name="snackbar_background_location_gadgetbridge">Gaitu atzeko planoko kokapena Nire kokapenaren Gadgetbridge eguneratzeko</string>
@@ -181,7 +180,7 @@
     <string name="format_speed_ms_accessibility">%1$.1f metro segundoko %2$s</string>
     <string name="format_precipitation_in_accessibility">%1$.2f hazbete %2$s</string>
     <string name="dialog_map_title">Aukeratu kokapen bat</string>
-    <string name="dialog_translation_text">QuickWeather-ek &lt;a href=https://weblate.org/&gt;Weblate&lt;/a&gt; erabiltzen du itzulpenetarako. QuickWeather ezagutzen duzun hizkuntza batera itzultzen lagundu nahi baduzu, lagundu &lt;a href=https://hosted.weblate.org/projects/quickweather/&gt;Weblate proiektuan&lt;/a&gt;.</string>
+    <string name="dialog_translation_text">PureWeather-ek &lt;a href=https://weblate.org/&gt;Weblate&lt;/a&gt; erabiltzen du itzulpenetarako. PureWeather ezagutzen duzun hizkuntza batera itzultzen lagundu nahi baduzu, lagundu &lt;a href=https://hosted.weblate.org/projects/pureweather/&gt;Weblate proiektuan&lt;/a&gt;.</string>
     <string name="dialog_edit_location_latitude">Latitudea</string>
     <string name="openmeteo_overcast">Lainotua</string>
     <string name="error_null_location">Ezin izan da kokapena zehaztu</string>
